# good-mitm

./: Cargo.toml  Dockerfile  Makefile  README.md  install.sh  pyproject.toml  video-mitm.service.template  video-mitm.sh  x-ui.json.template
.github/workflows/: build-docker-image.yml  maturin.yml
crates/core/: Cargo.toml
crates/core/src/: ca.rs  mitm.rs
crates/rule/: Cargo.toml
crates/trust_cert/: Cargo.toml
crates/trust_cert/src/: linux.rs
docs/: README.md  _sidebar.md  index.html  others.md
docs/guide/: 0_cert.md  1_rule.md  2_proxy.md  README.md  transparent_proxy.md
docs/rule/: Netflix.md  README.md  action.md  filter.md  modify.md
rules/: ads.yaml  map_modify.yaml  text_modify.yaml
src/: main.rs
